--- a/style.css
+++ b/style.css
@@ -2908,7 +2908,7 @@ padding-left: 23.5%;
 
 .mid {
     width:100%;
-    margin-top:35%;
+  margin-top: 80%;
 }
 .end {
     width:100%;
@@ -2917,7 +2917,7 @@ padding-left: 23.5%;
 
 
 .start-btn:hover h3{
-
+    font-size: 20px;
     margin-top: -20%;
  }
  .start-btn h3{
@@ -2925,7 +2925,7 @@ padding-left: 23.5%;
 font-size: 24px;
 
 }
-.start-btn p{
+.start-btn:hover p{
     font-size: 14px;
 
 }
@@ -2934,7 +2934,7 @@ margin-top: -30%;
 }
 
 
-.end-btn p{
+.end-btn:hover p{
  
     font-size: 14px;
 }
@@ -2946,20 +2946,21 @@ font-size: 24px;
 }
 
 .end-btn:hover h3{
-
+   font-size: 20px;
    margin-top: -20%;   
 }
 
 .six {
     width: 100%;
     height:800px;
+    margin-top: 20%;
 
 }
 .banner {
 
     height:700px;
     flex-direction: column;
-    padding-top: 30%;
+    padding-top: 0%;
 }
 .ban-1 {
     width:100%;
@@ -2971,6 +2972,7 @@ font-size: 24px;
     width:100%;
     height: 300px;
    display: table-column;
+   
    padding: 0% 4%;
 
 }
@@ -2981,7 +2983,7 @@ font-size: 24px;
 }
 
 .ban-2 p {
- 
+    text-align: center;
     font-size: 20px;
 
 }
