--- a/about.css
+++ b/about.css
@@ -731,6 +731,12 @@ line-height: 18px;
             width:100%;
             height: 400px;
            }
+           .log-pera h1{
+            font-size:22px;
+           }
+           .log-pera p{
+            font-size:12px;
+           }
            .log-img{
             width: 100%;
             height: 300px;
@@ -903,7 +909,7 @@ line-height: 18px;
             width:100%;
             height:200px;
             margin-left:0%;
-            margin-top: -50%;
+            margin-top: -60%;
            }
            .m-card h1{
             line-height:25px;
@@ -1192,7 +1198,7 @@ line-height: 18px;
             width:100%;
             height:300px;
             margin-left:0%;
-            margin-top: -30px;
+            margin-top: -80px;
            }
            .m-card h1{
             line-height:25px;
@@ -1254,6 +1260,7 @@ line-height: 18px;
             width:100%;
             height: 400px;
            }
+        
            .log-img{
             width: 100%;
             height: 300px;
