--- a/community.css
+++ b/community.css
@@ -516,6 +516,10 @@ line-height: 18px;
        
         
       }
+      .community h2 {
+        padding-bottom: 20px;
+        padding-left: 30px;
+      }
   
 
 
