--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 
     list-style: none;
     text-decoration: none;
-  
+    overflow-x: hidden;
 background: black;
 }
 
@@ -110,7 +110,7 @@ border-bottom: 2px solid #911B1B;
     transform: translate(-50%, -50%);
     color: white;
     font-size: 24px;
-    background-color: rgba(0, 0, 0, 0.7);
+    
     /* Optional: adds a semi-transparent background */
     padding: 10px 10px;
     border-radius: 5px;
@@ -197,53 +197,60 @@ margin-left:-10px;
     
 }
 
-
-
-
-
-
-
-
-.swiper-button-next:after,.swiper-button-prev:after {
-    font-family:swiper-icons;
-    font-size:25px;
-    text-transform: none!important;
+/* Button Styling */
+.swiper-button-next:after, .swiper-button-prev:after {
+    font-size: 25px;
+    text-transform: none !important;
     letter-spacing: 0;
     font-variant: initial;
-    line-height: 1
-  
+    line-height: 1;
 }
 
-.swiper-button-next,.swiper-button-prev {
-    position: absolute;
-    top: var(--swiper-navigation-top-offset,50%);
-    width: calc(var(--swiper-navigation-size)/ 44 * 27);
-    height: var(--swiper-navigation-size);
-    
-   margin: 19.5% 43%;
-    
+.swiper-button-next, .swiper-button-prev {
+    position: absolute !important;
+    top: 99% !important; /* Center vertically */
+    transform: translateY(-50%) !important; /* Proper centering */
+    width: 40px !important; /* Fixed width */
+    height: 40px !important; /* Fixed height */
     z-index: 10;
     cursor: pointer;
     display: flex;
     align-items: center;
-    justify-content:center;
-    
-    color: var(--swiper-navigation-color,var(--swiper-theme-color))
+    justify-content: center;
+    color: var(--swiper-navigation-color, var(--swiper-theme-color));
 }
 
-.swiper-pagination-bullet-active{
+
+.swiper-button-prev {
+    left:40%; /* Fixed position from left */
+}
+
+.swiper-button-next {
+    right:40%; /* Fixed position from right */
+}
+
+
+
+/* Pagination bullets */
+.swiper-pagination-bullet-active {
     background-color: rgba(157, 19, 19, 0.75) !important;
 }
 
-
 .swiper-pagination-bullet {
-    width: var(--swiper-pagination-bullet-width,var(--swiper-pagination-bullet-size,12px));
-    height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,12px));
+    width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 12px));
+    height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 12px));
     display: inline-block;
-    border-radius: var(--swiper-pagination-bullet-border-radius,50%);
-    background: var(--swiper-pagination-bullet-inactive-color,#888);
-    opacity: var(--swiper-pagination-bullet-inactive-opacity, .3)
+    border-radius: var(--swiper-pagination-bullet-border-radius, 50%);
+    background: var(--swiper-pagination-bullet-inactive-color, #888);
+    opacity: var(--swiper-pagination-bullet-inactive-opacity, .3);
 }
+
+
+
+
+
+
+
 
 
 
@@ -1951,12 +1958,13 @@ line-height: 18px;
 
 @media(max-width:1300px){
 
-    .swiper-button-next,.swiper-button-prev {
-
-        
-        margin:23.5% 40%;
-   
-     }
+    .swiper-button-prev {
+        left:40%; /* Fixed position from left */
+    }
+    
+    .swiper-button-next {
+        right:40%; /* Fixed position from right */
+    }
 
     .menu-toggle {
         display: block;
@@ -2147,9 +2155,7 @@ line-height: 15px;
             height: 250px;
         }
 
-        .contain{
-            flex-wrap: wrap;
-        }
+       
         .nine{
             padding: 8%;
         }
@@ -2175,26 +2181,37 @@ line-height: 15px;
         .dow{
             width: 25%;
         }
+
+        .carousel-7{
+            margin-left:15%;
+          }
   
     
 }
-
-@media(max-width:1024px){
-    .swiper-button-next,.swiper-button-prev {
-
-        
-        margin:29.5% 40%;
-   
-     }
+@media(max-width:1100px){
+    .swiper-button-prev {
+        left:35%; /* Fixed position from left */
+    }
+    
+    .swiper-button-next {
+        right:35%; /* Fixed position from right */
+    }
+    .carousel-7{
+        margin-left:15%;
+      }
 }
 
-@media (max-width:900px){
-    .swiper-button-next,.swiper-button-prev {
 
-        
-        margin:36.5% 35%;
-   
-     }
+
+@media (max-width:900px){
+
+    .swiper-button-prev {
+        left:30%; /* Fixed position from left */
+    }
+    
+    .swiper-button-next {
+        right:30%; /* Fixed position from right */
+    }
 
     .art2{
        
@@ -2224,6 +2241,16 @@ line-height: 15px;
     .box-text-3{
         height: 100px;
     }
+
+    .carousel-container-7 {
+        
+        padding-top: 15%;
+        
+      }
+      .carousel-7{
+        margin-left:2%;
+      }
+
     .register{
         width: 100%;
         flex-direction: column;
@@ -2238,13 +2265,18 @@ line-height: 15px;
 
 
 
-@media (max-width: 768px) {
-    .swiper-button-next,.swiper-button-prev {
 
-        
-        margin:39.5% 35%;
-   
-     }
+
+@media (max-width: 768px) {
+
+    .swiper-button-prev {
+        left:25%; /* Fixed position from left */
+    }
+    
+    .swiper-button-next {
+        right:25%; /* Fixed position from right */
+    }
+  
     .menu-toggle {
         display: block;
     position:absolute;
@@ -2291,7 +2323,7 @@ line-height: 15px;
         
         width:100%;
         font-size:25px;
-        margin-top:50%;
+        margin-top:30%;
         padding-right: 8.5%;
       
     }
@@ -2311,20 +2343,88 @@ line-height: 15px;
 
 
     .background {
-
+         height: 500px;
          padding: 130px 8%;  
         
      }
+     .a-3{
+        margin-top: -2.5%;
+
+     }
+     .a-2{
+        margin-top: -1%;
+     }
+     .b-1{
+        margin-top: 3%;
+        transform: rotate(-40deg);
+     }
+     .b-3{
+        margin-top:-2%;
+     }
+     .b-4{
+        margin-top: -3%;
+     }
+     .b-5{
+        margin-top: -2%;
+     }
+     .b-6{
+        margin-top: 3%;
+     }
+     .d-3{
+        margin-top: -2%;
+     }
+     .d-1{
+        margin-top: 2%;
+     }
+     .d-7{
+        margin-top: 2%;
+     }
+     .d-3{
+        margin-top: -4%;
+     }
+     .d-4{
+        margin-top: -3%;
+     }
+     .d-5{
+        margin-top: -3%;
+     }
      .contain {
-      flex-wrap: wrap;
-        gap: 10px;
+      
+        gap: 20px;
        width: 100%;
-       padding: 0% 8%;
+       padding:0% 8%;
         
+    }
+    #curve{
+        font-size: 12px;
+        margin-bottom: -50%;
+    }
+    .circle-1{
+       
+        width: 100px;
+    }
+    .span p{
+        
+        font-size:20px;
+        margin-left: -35%;
+
+       
+    }
+    .circle-2{
+
+        width: 100px;
+    }
+    .circle-3{
+
+        width: 100px;
+    }
+    .circle-4{
+
+        width: 100px;
     }
     
 #two {
-    height:750px;
+    height:600px;
 }
 
 .three {
@@ -2425,7 +2525,7 @@ line-height: 15px;
 
 .start-btn:hover h3{
 
-    margin-top: 0%;
+    margin-top: 5%;
     font-size: 24px;
  }
  .start-btn h3{
@@ -2457,7 +2557,7 @@ font-size: 24px;
 
 .end-btn:hover h3{
     font-size: 24px;
-   margin-top: 0%;   
+   margin-top: 5%;   
 }
 
 .six {
@@ -2509,74 +2609,90 @@ font-size: 24px;
 }
 .box-text{
     
-    height:1800px;
+    height:1700px;
 }
 .box-text-1 {
     width: 100%;
     height:150px;
-    padding: 1% 6%;
+    padding: 2% 6%;
+
 }
 .box-text-2{
     width: 100%;
-    height: 900px;
+    height: 1000px;
     padding: 0% 6%;
-
+    
 }
 .flex-article1{
     width: 100%;
     height:500px;
 flex-direction: column;
 justify-content:center;
-gap: 15px;
-
+gap: 10px;
+padding: 0% 10%;
 
 }
 .flex-article2{
     width: 100%;
     height:500px;
 flex-direction: column;
+justify-content: center;
+padding: 0% 10%;
+gap: 10px;
+margin-top: -10%;
+
 
 }.flex-article3{
     width: 100%;
     height:500px;
 flex-direction: column;
-margin-top: -4%;
-
+margin-top: -15%;
+padding: 0% 10%;
+gap: 10px;
 }
 
 .art1{
    width: 100%;
+   height: 50px;
     padding: 2% 1%;
   
 }
 .art2{
     width: 100%;
-     padding: 5% 10%;
- 
+    height: 60px;
+     padding: 3% 10%;
+     
  }
 
  .art3{
     width: 100%;
-     padding: 5% 10%;
+    height: 60px;
+     padding: 3% 10%;
  
  }
  
  .box-text-3 {
     width: 100%;
-    padding: 0% 1%;
+    padding: 0% 10%;
     padding-bottom: 100%;
 
    
 }
 .btn-text-3{
-flex-direction: column;
+flex-wrap: wrap;
+font-size: 18px;
 
+}
+.btn-text-3 span{
+font-size: 18px;
+    
 }
 
 .eight{
     width:100%;
     height: 800px;
     padding: 0% 3%;
+    margin-top: 5%;
 }
 .eight-text{
     width: 100%;
@@ -2735,18 +2851,185 @@ padding-left: 23.5%;
 
 
 }
+@media(max-width:550px){
 
-@media(max-width:430px) {
-    .swiper-button-next,.swiper-button-prev {
-
-        
-        margin:50.5% 35%;
-   
-     }
+    .swiper-button-prev {
+        left:20%; /* Fixed position from left */
+    }
     
+    .swiper-button-next {
+        right:20%; /* Fixed position from right */
+    }
+
+    .contain {
+      
+        gap: 10px;
+       width: 100%;
+       padding:0% 8%;
+        
+    }
+
+    .banner{
+        overflow: hidden;
+    }
+    .box-text-2{
+        width: 100%;
+        height: 1000px;
+        padding: 0% 6%;
+        margin-top: 13%;
+    }
+    #four{
+        margin-top: 20%;
+    }
+    .div-min{
+        margin-top: 130%;
+     }
+
+     .start {
+        width:100%;
+    
+    } 
+    
+    .start-btn:hover{
+    
+        height: 200px;
+    }
+    
+    .end-btn:hover{
+    
+        height: 200px;
+    }
+    
+    .mid {
+        width:100%;
+      margin-top: 50%;
+    }
+    .end {
+        width:100%;
+        margin-top:10%;
+    }
+    
+    
+    .start-btn:hover h3{
+        font-size: 20px;
+        margin-top: 2%;
+     }
+     .start-btn h3{
+    
+    font-size: 24px;
+    
+    }
+    .start-btn:hover p{
+        font-size: 14px;
+    
+    }
+    .start-btn:hover .mara{
+    margin-top: 0%;
+    }
+    
+    
+    .end-btn:hover p{
+     
+        font-size: 14px;
+    }
+    
+    .end-btn h3{
+    
+    font-size: 24px;
+    
+    }
+    
+    .end-btn:hover h3{
+       font-size: 20px;
+       margin-top: 5%;   
+    }
+    .six{
+        margin-top: 30%;
+       
+    }
+    .carousel-container-7 {
+        
+        padding-top: 30%;
+        
+      }
+   
+    .carousel-7 {
+
+        margin-left:10%;
+        display: flex;
+        gap:410px;
+         }
+}
+@media(max-width:528px){
+    .swiper-button-prev {
+        left:20%; /* Fixed position from left */
+    }
+    
+    .swiper-button-next {
+        right:20%; /* Fixed position from right */
+    }
+    .carousel-7 {
+
+        margin-left:9%;
+        display: flex;
+        gap:410px;
+         }
 }
 
+@media(max-width:518px){
+    .swiper-button-prev {
+        left:20%; /* Fixed position from left */
+    }
+    
+    .swiper-button-next {
+        right:20%; /* Fixed position from right */
+    }
+    .carousel-7 {
+
+        margin-left:5%;
+        display: flex;
+        gap:410px;
+         }
+}
+@media(max-width:454px){
+    .swiper-button-prev {
+        left:20%; /* Fixed position from left */
+    }
+    
+    .swiper-button-next {
+        right:20%; /* Fixed position from right */
+    }
+    .carousel-7 {
+
+        margin-left:-1%;
+        display: flex;
+        gap:410px;
+         }
+}   
+@media(max-width:414px){
+    .carousel-7 {
+
+        margin-left:-5%;
+        display: flex;
+        gap:410px;
+         }
+} 
+
+
 @media (max-width:400px) {
+    .swiper-button-next, .swiper-button-prev {
+    
+        top:100% !important; /* Center vertically */
+       
+    }
+    .swiper-button-prev {
+        left: 15%; /* Fixed position from left */
+        
+    }
+    
+    .swiper-button-next {
+        right:15%; /* Fixed position from right */
+    }
 
     .menu-toggle {
         display: block;
@@ -2808,28 +3091,112 @@ padding-left: 23.5%;
         font-size: 15px;
     
     }
-    .swiper-button-next,.swiper-button-prev {
-
-        
-       margin: 84% 20%;
-  
-    }
+ 
 
     .background {
-
+       height: 500px;
          padding: 130px 8%;  
         
      }
+
+
+     .c-1{
+        margin-top: 2%;
+     }
+     .c-4{
+        margin-top: 2%;
+     }
+    .a-3{
+        margin-top: -2.5%;
+
+     }
+     .a-2{
+        margin-top: -1%;
+     }
+     .b-1{
+        margin-top: 10%;
+        transform: rotate(-40deg);
+     }
+     .b-3{
+        margin-top:-2%;
+     }
+     .b-4{
+        margin-top: -3%;
+     }
+     .b-5{
+        margin-top: -2%;
+     }
+     .b-6{
+        margin-top: 12%;
+     }
+     .b-7{
+        margin-top: 5%;
+     }
+     .d-6{
+        margin-top: 2%;
+     }
+     .d-1{
+        margin-top: 10%;
+     }
+     .d-7{
+        margin-top: 10%;
+      
+     }
+     .d-3{
+        margin-top: -8%;
+     }
+     .d-4{
+        margin-top: -6%;
+     }
+     .d-5{
+        margin-top: -3%;
+     }
      .contain {
-      flex-wrap: wrap;
+      
         gap: 10px;
        width: 100%;
-       padding: 0% 8%;
+       padding:0% 8%;
         
     }
+    #curve{
+        font-size: 10px;
+        margin-bottom: -75%;
+    }
+    .circle-1{
+       
+        width:75px;
+        
+    }
+    .span p{
+        
+        font-size:15px;
+        margin-left: -50%;
+        
+       
+    }
+    .circle-2{
+
+        width: 75px;
+    }
+    .circle-3{
+
+        width: 75px;
+    }
+    .circle-4{
+
+        width:75px;
+    }
+
+.circle-1 .span p{
+    margin-top: 28%;
+} 
+.circle-2 .span p{
+    margin-top: 28%;
+} 
+
     
 #two {
-    height:1200px;
+    height:600px;
 }
 
 #big-div {
@@ -2875,12 +3242,13 @@ padding-left: 23.5%;
 #four {
     width: 100%;
     height:1500px;
-    margin-top: 120%;
+    margin-top: 70%;
 
 }
 .top {
     width: 100%;
-    padding: 0% 0%;
+   margin-top: -10%;
+  
 }
 .top h1 {
     line-height: 40px;
@@ -3017,19 +3385,23 @@ font-size: 24px;
     height:500px;
 flex-direction: column;
 justify-content:center;
-gap: 15px;
+gap: 10px;
 
 }
 .flex-article2{
     width: 100%;
     height:500px;
 flex-direction: column;
+justify-content: center;
+gap: 10px;
 
 }.flex-article3{
     width: 100%;
     height:500px;
 flex-direction: column;
-margin-top: -4%;
+justify-content: center;
+gap: 10px;
+margin-top: -22%;
 
 }
 
@@ -3061,6 +3433,7 @@ margin-top: -4%;
 flex-direction: column;
 
 }
+
 
 .eight{
     width:100%;
@@ -3218,5 +3591,7 @@ padding-left: 23.5%;
 
 
 }
+
+
 
 
